--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,142 @@
+.top .port {
+  border: 1px solid #1d1e2c;
+  border-radius: 50%;
+}
+
 html {
   margin: 0;
+  font-family: "Raleway", sans-serif;
+}
+
+body {
+  margin: 2% 15%;
+  background-color: #ededeb;
+}
+
+h1 {
+  font-size: 3rem;
+  color: #ffffff;
+}
+
+h2 {
+  font-size: 2rem;
+  color: #ffffff;
+}
+
+h3 {
+  font-size: 2rem;
+  margin-bottom: 0.8rem;
+  padding: 0;
+}
+
+h4 {
+  font-size: 1.2rem;
+}
+
+a {
+  color: #1d1e2c;
+}
+
+.shadow {
+  box-shadow: 9px 9px 15px -3px #0E0E0F;
+}
+
+.top {
+  height: 40vh;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  background-image: url(../images/building.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.top .port {
+  width: 13rem;
+  height: 13rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+.top .port img {
+  height: 17rem;
+}
+
+.bar {
+  content: "";
+  width: 5rem;
+  height: 0.4rem;
+  background-color: rgba(29, 30, 44, 0.5);
+  border-radius: 10px;
+}
+
+.bodyArea {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background-color: #EFEFEF;
+  min-height: 100%;
+}
+.bodyArea .leftSide {
+  background-color: #ffffff;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 80%;
+  padding: 2rem;
+}
+.bodyArea .leftSide .contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.bodyArea .leftSide .contact .contFlex {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+.bodyArea .leftSide .contact .contFlex i {
+  margin-right: 0.5rem;
+}
+.bodyArea .rightSide {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 0.5rem;
+  height: 100%;
+  width: 100%;
+  padding-left: 3rem;
+}
+
+@media screen and (max-width: 700px) {
+  .bodyArea {
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: #ffffff;
+  }
+
+  .shadow {
+    box-shadow: none;
+  }
+
+  .top {
+    flex-wrap: wrap;
+    padding-bottom: 1rem;
+  }
+
+  .rightSide ul {
+    list-style-position: inside;
+    padding-left: 0.5rem;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
