--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,124 @@
+@import 'globalVars.scss';
+
+
+
 html{
   margin: 0;
+  font-family: $font-Fam;
 }
+body{
+  margin: 2% 15%;
+  background-color: #ededeb;
+}
+h1{
+  font-size: $font-size-lg;
+  color: $primary;
+}
+h2{
+  font-size: $font-size-md;
+  color: $primary;
+}
+h3{
+  font-size: $font-size-md;
+  margin-bottom: .8rem; 
+  padding: 0; 
+}
+h4{
+  font-size: $font-size-sm + .2rem;
+}
+a{
+  color: $font-color;
+}
+.shadow{
+  box-shadow: 9px 9px 15px -3px #0E0E0F;
+}
+.top{
+  height: 40vh;
+  width: 100%;
+  @include flexMan(row, space-evenly, center);
+  background-image: url(../images/building.jpg);
+  background-size:cover;
+   background-repeat: no-repeat;
+  .port{
+    width: 13rem;
+    height: 13rem;
+    @include flexMan(row, center, center);
+    overflow: hidden;
+   img{
+     height: 17rem;
+   }
+    @extend %borderRad;
+  }
+}
+.bar{
+  content: ""; 
+  width: 5rem;
+  height: .4rem;
+  background-color: rgba(29, 30, 44, .5);
+  border-radius: 10px; 
+ 
+}
+.bodyArea{
+  @include flexMan(row, flex-start, flex-start );
+  background-color: $secondary;
+  min-height: 100%;
+  // background-color: $primary;
+  
+  .leftSide{
+    background-color: $primary;
+    min-height: 100%;
+    @include flexMan(column, flex-start, flex-start );
+    width: 80%;
+  
+    padding: $pad +1.5rem;
+    .contact{
+      @include flexMan(column, flex-start, flex-start );
+
+      .contFlex{
+        @include flexMan(row, flex-start, center);
+        i{
+          margin-right: $margy;
+        }
+      }
+      
+    }
+    
+  }
+  .rightSide{
+    @include flexMan(column, flex-start, flex-start);
+    // background-color: $secondary;
+    padding: $pad;
+    height: 100%;
+    width: 100%;
+    padding-left: 3rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+ .bodyArea{
+   flex-wrap: wrap;
+   justify-content: center;
+   background-color: $primary;
+ }
+ .shadow{
+  box-shadow: none;
+ }
+ .top{
+  flex-wrap: wrap;
+  padding-bottom: 1rem;
+ }
+ .rightSide{
+   ul{
+     list-style-position: inside;
+     padding-left: .5rem;
+   }
+ }
+}
+
+
+
+
+
+
+
+
